<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Klaver 7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Klaver_7">Klaver 7</string>
    <string name="blank">blank</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="start">Start</string>
    <string name="info">Info</string>
    <string name="volume">Volume</string>
    <string name="taal">Taal</string>
    <string name="afsluiten">Afsluiten</string>
    <string name="title_activity_startscreen">Startscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="speler1">Speler 1</string>
    <string name="speler2">Speler 2</string>
    <string name="speler3">Speler 3</string>
    <string name="verloren">VERLOREN</string>
    <string name="speler11">Speler 1</string>

</resources>