<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:layout_width="28sp"
        android:layout_height="60sp"
        android:contentDescription="@string/blank"
        android:scaleType="matrix"
        android:src="@drawable/klaver7" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/Klaver_7"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="serif" />
</LinearLayout>

   	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/start" 
	    android:textStyle="bold"
	    android:typeface="serif"
	    android:textSize="30sp"/>
	
	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/info" 
	    android:textStyle="bold"
	    android:typeface="serif"
	    android:textSize="25sp"/>
	
	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/volume" 
	    android:textStyle="bold"
	    android:typeface="serif"
	    android:textSize="25sp"/>
		
	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/afsluiten" 
	    android:textStyle="bold"
	    android:typeface="serif"
	    android:textSize="25sp"/>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    
	    <ImageView
        android:layout_width="28sp"
        android:layout_height="60sp"
        android:contentDescription="@string/blank"
        android:scaleType="matrix"
        android:src="@drawable/klaver7" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/Klaver_7"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="serif" />
	</LinearLayout>
   
</LinearLayout>